--- a/style.css
+++ b/style.css
@@ -6,12 +6,26 @@ body {
     font-family: Roboto, sans-serif;
 }
 
+.hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #1f2937;
+    color: white;
+}
+
+/* .hero > * {
+    width: 100%;
+} */
+
 .header {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     background-color: #1f2937;
+    width: 100%
+    
 }
 
 .logo {
@@ -25,6 +39,40 @@ body {
     flex-direction: row;
 }
 
+.welcome-section {
+    display: flex;
+    flex-direction: row;
+    margin: 60px auto;
+    justify-content: center;
+}
+
+.signup {
+    text-align: left;
+    width: 30%;
+}
+
+.signup li {
+    margin: 0 0 5px 0;
+}
+
+.hero-main {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #f9faf8;
+}
+
+.placeholder {
+    background-color: grey;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    margin: 75px 80px;
+    margin-top: 20px;
+    padding: 75px 100px;
+}
+
+/* content css */
+
 li {
     margin: 10px;
 }
@@ -37,3 +85,11 @@ a {
     color: white;
     text-decoration: none;
   }
+
+button {
+    border-radius: 8px;
+    padding: 7px 18px;
+    background-color: #3882f6;
+    color: white;
+    border: none;
+}
